<resources>
    <string name="app_name">Plesir Purworejo</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_view_item1">Beranda</string>
    <string name="navigation_view_item2">Wisata</string>
    <string name="navigation_view_item3">Kuliner</string>
    <string name="navigation_view_item4">Budaya</string>
    <string name="navigation_view_item5">Tentang</string>
    <string name="menu1">Profil Purworejo</string>
    <string name="menu2">Wisata</string>
    <string name="menu3">Kuliner</string>
    <string name="menu4">Budaya</string>
    <string name="profil">
        Kabupaten Purworejo adalah sebuah kabupaten di provinsi Jawa Tengah. Ibu kotanya berada di kota Purworejo.
        \nKabupaten ini berbatasan dengan Kabupaten Wonosobo dan Kabupaten Magelang di utara, Kabupaten Kulon Progo (Provinsi Daerah Istimewa Yogyakarta) di timur, Samudra Hindia di selatan, serta Kabupaten Kebumen di sebelah barat.
        \n\nKabupaten Purworejo terdiri atas 16 kecamatan, yang dibagi lagi atas sejumlah 469 desa dan 25 kelurahan. Pusat pemerintahan berada di Kecamatan Purworejo.
        \n\nDalam bidang pariwisata, purworejo mengandalkan pantainya di sebelah selatan yang bernama "Pantai Ketawang", "Pantai Keburuhan (Pasir Puncu), "Pantai Jatimalang" didukung dengan gua-gua : Gua Selokarang, Sendang Sono, Gua Seplawan, Gua Pencu, dan sebagainya.
        \nDisamping itu, terdapat juga air terjun "Curug Muncar" dengan ketinggian ± 40m yang terletak di kecamatan Bruno dengan panorama alam yang masih alami, dan masih banyak air terjun yang lain.
    </string>
    <string-array name="nama_wisata">
        <item>Curug Condong</item>
        <item>Curug Abang</item>
        <item>Curug Lesung</item>
        <item>Curug Muncar</item>
        <item>Curug Purbayan</item>
        <item>Curug Sikantong</item>
        <item>Curug Tawing</item>
        <item>Hutan Pinus</item>
        <item>Pantai Jatimalang</item>
        <item>Pantai Ketawang</item>
        <item>Pantai Puncu</item>
        <item>Benteng Pendem</item>
        <item>Geger Menjangan</item>
        <item>Curug Silangit</item>
        <item>Masjid Agung Purworejo</item>
        <item>Gua Seplawan</item>
        <item>Museum Tosan Aji</item>
        <item>Alun-Alun Purworejo</item>
    </string-array>
</resources>