<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation1"
            android:checkable="false"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_view_item1" />
        <item
            android:id="@+id/navigation2"
            android:checkable="false"
            android:icon="@drawable/ic_landscape_black_24dp"
            android:title="@string/navigation_view_item2" />
        <item
            android:id="@+id/navigation3"
            android:checkable="false"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/navigation_view_item3" />
        <item
            android:id="@+id/navigation4"
            android:checkable="false"
            android:icon="@drawable/ic_palette_black_24dp"
            android:title="@string/navigation_view_item4" />

        <item>
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/navigation5"
                        android:checkable="false"
                        android:icon="@drawable/ic_person_black_24dp"
                        android:title="@string/navigation_view_item5" />
                </group>
            </menu>
        </item>
    </group>
</menu>